<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">湖北天气</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home_bottom_radio1">旅游天气</string>
    <string name="home_bottom_radio2">特色旅游</string>
    <string name="home_bottom_radio3">城市天气</string>
    <string name="home_bottom_radio4">实景论坛</string>

    <!-- 旅游天气 -->
    <string name="travel_title00">推荐景点</string>
    <string name="travel_title01">景点天气</string>
    <string name="travel_title02">灾害预警</string>
    <string name="travel_title03">卫星云图</string>

    <!-- 特色旅游 -->
    <string name="special_travel_title01">游玩指数</string>
    <string name="special_travel_title02">特色旅游</string>
    <string name="special_travel_title03">精细预报</string>
    <string name="special_travel_title04">8小时实况</string>

    <!-- 出游指数 -->
    <string name="indices_item01">适宜</string>
    <string name="indices_item02">较适宜</string>
    <string name="indices_item03">较不适宜</string>
    <string name="indices_item04">不适宜</string>

    <!-- 精细预报 -->
    <string name="rt_cancel">取消</string>
    <string name="rt_input">输入景点名</string>
    <string name="temperature_left">°</string>
    <string name="temperature">℃</string>
    <string name="scenery_title">实景</string>

    <!-- 我的账户 -->
    <string name="user_myOwn">我的账户</string>
    <string name="user_namehint">登录名/手机号</string>
    <string name="user_passwordhint">密码</string>
    <string name="user_forgetpassword">忘记密码</string>
    <string name="user_quickregist">快速注册账号</string>
    <string name="user_login">登   陆</string>
    <string name="user_registtitle">快速注册</string>
    <string name="user_regist">注册</string>
    <string name="user_mobilephone">手机号</string>
    <string name="user_inputpassword">请输入密码</string>
    <string name="user_inputpasswordagain">再次输入密码</string>
    <string name="username_nonull">请填写用户名</string>
    <string name="userphone_nonull">请填写手机号</string>
    <string name="userpassword_nonull">请填写密码</string>
    <string name="userpassword_confirenonull">请填写确认密码</string>
    <string name="userconfire_notequal">两次输入密码不一致</string>
    <string name="user_registfail">注册失败，请检查您输入的手机号</string>
    <string name="user_registsuccess">注册成功，返回登录界面</string>
    <string name="user_loginfail">登录失败，请检查用户名或密码</string>

    <!-- 用户中心 -->
    <string name="usercenter_title">用户中心</string>
    <string name="usercenter_weather">天气推送</string>
    <string name="usercenter_warn">气象灾害预警</string>
    <string name="usercenter_cache">清理缓存</string>
    <string name="usercenter_time">推送时段</string>
    <string name="usercenter_timeset">开启后，您可以在10:00-22:00之间收到我们推送的天气信息</string>
    <string name="usercenter_update">自动升级</string>
    <string name="usercenter_12121">12121电话资讯</string>
    <string name="usercenter_feedback">信息反馈</string>
    <string name="usercenter_logout">账户登出</string>

</resources>