<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_holo_light"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bottom_menu_bg"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/travel_title00"
                style="@style/bottom_menu_bg"
                android:background="@drawable/home_top_radio_bg"
                android:checked="true"
                android:text="@string/travel_title00"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/travel_title01"
                style="@style/bottom_menu_bg"
                android:background="@drawable/home_top_radio_bg"
                android:text="@string/travel_title01"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/travel_title02"
                style="@style/bottom_menu_bg"
                android:background="@drawable/home_top_radio_bg"
                android:text="@string/travel_title02"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/travel_title03"
                style="@style/bottom_menu_bg"
                android:background="@drawable/home_top_radio_bg"
                android:text="@string/travel_title03"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RadioGroup>
    </LinearLayout>

    <fragment
        android:id="@+id/bodyZero"
        android:name="com.casey.hbweather.ui.TravelFrag_Recommend"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <fragment
        android:id="@+id/bodyOne"
        android:name="com.casey.hbweather.ui.TravelFrag_Weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <fragment
        android:id="@+id/bodyTwo"
        android:name="com.casey.hbweather.ui.TravelFrag_Warn"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <fragment
        android:id="@+id/bodyThree"
        android:name="com.casey.hbweather.ui.TravelFrag_Cloud"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>