<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_holo_light"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bottom_menu_bg"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/special_travel_title_radio01"
                style="@style/bottom_menu_bg"
                android:background="@drawable/home_top_radio_bg"
                android:checked="true"
                android:text="@string/special_travel_title01"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/special_travel_title_radio02"
                style="@style/bottom_menu_bg"
                android:background="@drawable/home_top_radio_bg"
                android:text="@string/special_travel_title02"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/special_travel_title_radio03"
                style="@style/bottom_menu_bg"
                android:background="@drawable/home_top_radio_bg"
                android:text="@string/special_travel_title03"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/special_travel_title_radio04"
                style="@style/bottom_menu_bg"
                android:background="@drawable/home_top_radio_bg"
                android:text="@string/special_travel_title04"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RadioGroup>
    </LinearLayout>

    <fragment
        android:id="@+id/special_travel_bodyOne"
        android:name="com.casey.hbweather.ui.SpecialTravelFrag_Indices"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <fragment
        android:id="@+id/special_travel_bodytwo"
        android:name="com.casey.hbweather.ui.SpecialTravelFrag_Travel"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <fragment
        android:id="@+id/special_travel_bodythree"
        android:name="com.casey.hbweather.ui.SpecialTravelFrag_Forecast"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <fragment
        android:id="@+id/special_travel_bodyfour"
        android:name="com.casey.hbweather.ui.SpecialTravelFrag_Rt"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>